# SPACECPP

./: .gitignore  AggregateBunchData.ipynb  BunchParameters.yaml  CMakeLists.txt  CavityParameters.yaml  HHCParameters.yaml  HHC_NSLSIIU.in  LICENSE.txt  NSLS-Submit.sh  README.md  TODO.md  TimeEvolution.yaml  VerificationPlots.ipynb  WakefieldGenration.ipynb  WakefieldParameters.yaml  recompile.sh  setup.sh  submit.sh
Notebooks/: AggregateBunchData.ipynb  README.md  WakefieldGenration.ipynb
configs/: BunchParameters.yaml  CavityParameters.yaml  LatticeParameters.yaml  README.md  TauWakefield.csv  TimeEvolution.yaml  Wakefield.txt  WakefieldParameters.yaml
fftw/lib/: libfftw3.la  libfftw3.so.3.6.10  libfftw3_mpi.la  libfftw3_mpi.so.3.6.10
fftw/lib/cmake/fftw3/: FFTW3Config.cmake
fftw/lib/pkgconfig/: fftw3.pc
include/: ActiveCavity.h  Bunch.h  Cavity.h  Constants.h  Density.h  FileParser.h  GaussDist.h  Gaussian.h  MPIHelper.h  MathFunction.h  Parameters.h  Particle.h  PassiveCavity.h  ProbDist.h  Quartic.h  README.md  TimeEvolution.h  UniformDist.h  ValidateInput.h  Wakefield.h
src/: ActiveCavity.cpp  Bunch.cpp  Density.cpp  FileParser.cpp  GaussDist.cpp  Gaussian.cpp  MPIHelper.cpp  Parameters.cpp  Particle.cpp  PassiveCavity.cpp  ProbDist.cpp  Quartic.cpp  TimeEvolution.cpp  UniformDist.cpp  ValidateInput.cpp  Wakefield.cpp  main.cpp  test.cpp
